care/force-app/main/default/objects/Code_Mapping__c/Code_Mapping__c.object-meta.xml
<CustomObject>
    <description>Junction object to connect Business Acct, Person Acct, and Client Group.</description>
    <label>Code Mapping</label>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Code Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>