care/force-app/main/default/objects/Code_Mapping__c/fields/Corporate_Code__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>Business Account</inlineHelpText>
    <label>Corporate Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>