care/force-app/main/default/objects/Code_Mapping__c/fields/Employer_Program__c.field-meta.xml
<CustomField>
    <fullName>Employer_Program__c</fullName>
    <inlineHelpText>Person Account</inlineHelpText>
    <label>Employer Program</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>