care/force-app/main/default/objects/Code_Mapping__c/fields/Group_Corp_Code__c.field-meta.xml
<CustomField>
    <fullName>Group_Corp_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>Client Group</inlineHelpText>
    <label>Group Corp Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>