care/force-app/main/default/objects/Code_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Corporate_Code__c</columns>
    <columns>Group_Corp_Code__c</columns>
    <columns>Employer_Program__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>